# CRome

./: .gitignore  Cargo.toml  Makefile  README.md  main.c  main.s  test.sh  tmp.s
src/: codegen.rs  driver.rs  emission.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantic.rs  symbol.rs  tacky.rs  types.rs  validate.rs
src/codegen/: instruction_fixup.rs  register_allocation.rs  tacky_to_asm.rs
src/driver/: assembler.rs  compiler.rs  linker.rs  preprocessor.rs
src/semantic/: identifier_resolution.rs  loop_annotation.rs  type_checking.rs
src/symbol/: backend.rs  frontend.rs
tests/: codegen.rs  common.rs  driver.rs  emission.rs  lexer.rs  parser.rs  semantic.rs  tacky.rs  test.c
tests/source/: float_valid.c  lexer_valid.c
tests/source/arrays/valid/: expected.result
tests/source/binary_operators/valid/: expected.result
tests/source/compound_statements/valid/: expected.result
tests/source/doubles/valid/: expected.result
tests/source/floats/valid/: expected.result
tests/source/functions/valid/: expected.result
tests/source/if_statements/valid/: expected.result
tests/source/linkage/valid/: expected.result
tests/source/local_variables/valid/: expected.result
tests/source/logical_operators/valid/: expected.result
tests/source/longs/valid/: expected.result
tests/source/loops/valid/: expected.result
tests/source/minimal_compiler/valid/: expected.result
tests/source/pointers/valid/: expected.result
tests/source/unary_operators/valid/: expected.result
tests/source/unsigned_integers/valid/: expected.result
(+50 files in other folders)
