[package]
name = "crome"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ordered-float = "5.3.0"
regex = "1.12.3"
rust_decimal = "1.42.1"
tempfile = "3.26.0"

[features]
lex    = []
parser   = ["lex"]
validate = ["parser"]
tacky    = ["validate"]
codegen  = ["tacky"]
emission = ["codegen"]
default = ["emission"] # LSP needs this

[lib]
name = "crome"
path = "src/lib.rs"
